syntax = "proto3";
package booking;
option go_package = "./;pb";

import "empty.proto";


service BookingCustomer {
    rpc CreateCustomer(Customer) returns (Customer);
    rpc UpdateCustomer(Customer) returns (Customer);
    rpc FindCustomer(FindCustomerRequest) returns (Customer);
    rpc DeleteCustomer(DeleteCustomerRequest) returns (Empty);
    rpc ListCustomer(ListCustomerRequest) returns (ListCustomerResponse);
    rpc HistoryBooking(HistoryBookingRequest) returns (ListBookedResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (Customer);
}
message Customer {
string id =1;
string name = 2;
string address =3;
string license_id =4;
string phone_number =5;
string email =6;
string password =7;
bool active =8;
}


message FindCustomerRequest {
    string id = 1;
    string name =2;
}


message ListCustomerResponse {
    repeated Customer Customers = 1;
}

message DeleteCustomerRequest {
    string id = 1;
}


message ListCustomerRequest {
    string name = 1;
}

message Booked {
    string customer_id = 1;
    string flight_id = 2;
    string code = 3;
    string status = 4;
    string book_date = 5;    
}

message ListBookedResponse {
    repeated Booked Bookeds = 1;
}
message HistoryBookingRequest {
    string id = 1;
}

message ChangePasswordRequest{
    string id = 1;
    string password = 2;
}